Fix popup not aligned

--- a/style.css
+++ b/style.css
@@ -164,6 +164,9 @@ body::before {
   .main {
     height: 90% !important;
   }
+  .popup {
+    height: 90% !important;
+  }
 }
 @media screen and (max-height: 470px) {
   .right > div {
@@ -182,6 +185,14 @@ body::before {
     width: 100%;
     height: 65%;
   }
+  .popup {
+    width: 100%;
+    height: 100%;
+    border-radius: 0 !important;
+    text-align: left;
+    background-color: rgba(0, 0, 0, 0.8);
+    line-height: 1.25rem;
+  }
   .main > .right {
     border-radius: 1.25rem;
     position: relative;
@@ -191,6 +202,7 @@ body::before {
     width: 450px;
     max-width: 90%;
     background: none;
+
   }
 
   .left {
@@ -204,7 +216,7 @@ body::before {
     .right > div {
     width: 95%;
     height: 100%;
-    padding-inline: 1.5rem;
+      
   } 
 }
 
@@ -284,6 +296,9 @@ body::before {
   padding-left: 20px;
 }
 
+#birth-date {
+  background-color: white;
+}
 
 .wrapper > label {
   font-size: 0.8rem;
